<resources>
    <string name="app_name">晶崴学车</string>
    <string name="app_name_new">驾培助手</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="drive_home">首页</string>
    <string name="drive_info">资讯</string>
    <string name="drive_communicate">交流</string>
    <string name="drive_mine">我的</string>
    <string name="look_for_coach">找教练</string>
    <string name="look_drive_school">找驾校</string>
    <string name="click_login_or_regist">点击登录/注册</string>
    <!-- 用户中心 -->
    <string name="list_index1">我的订单</string>
    <string name="list_index2">我的收藏</string>
    <string name="list_index3">我的评价</string>
    <string name="list_index4">我的钱包</string>
    <string name="list_index5">设置</string>
    <string name="list_index6">关于</string>
    <string name="back">返回</string>
    <string name="user_detail">详情</string>
    <string name="send">发送</string>
    <string name="user_icon">头像</string>
    <string name="user_realName">姓名</string>
    <string name="user_name">昵称</string>
    <!-- 账户名一般是用户的手机号 -->
    <string name="user_count">账户</string>
    <string name="user_sex">性别</string>
    <string name="user_loc">地区</string>
    <string name="user_card">身份证</string>
    <string name="user_type">账户类别</string>
    <string name="exit_out">退出登录</string>
    <string name="register_time">注册时间</string>
    <string name="download_success">下载成功</string>
    <string name="download_progress">下载进度</string>
    <string name="dialogNegativeButton">立即更新</string>
    <string name="dialogPositiveButton">以后再说</string>
    <string name="newUpdateAvailable">更新</string>
    <!-- TrainingShow 先学车，后交费 -->
    <string name="start_str">先学车，后交费</string>
    <string name="appCopyRight">荆州驾培网版权所有</string>
    <!-- 应用程序下载更新 -->
    <string name="dialog_update_title">更新</string>
    <string name="dialog_update_msg">发现新版本，版本号：</string>
    <string name="dialog_update_msg2">，是否立即更新</string>
    <string name="dialog_update_btnupdate">更新</string>
    <string name="dialog_update_btnnext">下次再说</string>
    <string name="dialog_downloading_msg">正在下载更新。。。</string>
    <string name="dialog_alert_title">警告</string>
    <string name="dialog_downfailed_btndown">重新下载</string>
    <string name="dialog_downfailed_btnnext">以后再说</string>
    <string name="dialog_error_title">错误</string>
    <string name="dialog_downfailed_msg">下载更新失败，是否重试？</string>

    <!-- 下拉刷新 -->
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="no_more">没有更多内容</string>

    <!-- 新闻信息 -->
    <string name="info_title">新闻标题</string>
    <string name="info_commentNum">142评论</string>
    <string name="info_image">新闻缩略图</string>
    <string name="info_origin">政策法规</string>
    <!-- login -->
    <string name="phone">输入手机号码</string>
    <string name="password">密码</string>
    <string name="Login">登录</string>
    <string name="WelCome">欢迎使用</string>
    <string name="WeiXinLogin">微信绑定</string>

    <string name="forgot">忘记密码</string>
    <string name="register">新用户</string>
    <string name="welcome_use">欢迎使用</string>
    <string name="label_cancel_dislike">撤消</string>
    <string name="please_login">请先登录，后再操作</string>
    <string name="feed_back_louzhu">回复楼主</string>
    <string name="upload_local">上传本机</string>
    <string name="upload_carmer">拍照上传</string>
    <string name="exam_content">1、第一题</string>
    <!-- error page -->
    <string name="error_view_loading">加载中</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="test_on_line">%s在线模拟</string>
    <string name="subject_one">科目一</string>
    <string name="subject_four">科目四</string>
    <string name="video_loading">视屏加载中。。。</string>
    <string name="not_write">未填写</string>
    <string name="click_write">点击修改</string>
    <string name="remember">记住密码</string>
    <string name="input_password">请输入密码</string>
    <string name="sure_password">请确认密码</string>
    <string name="next_step">下一步</string>
    <string name="all_play">一口价:￥%s</string>
    <string name="all_pay">一口价</string>
    <string name="period_pay">分期付款</string>
    <string name="resend">重发(%s)</string>
    <string name="no_info">暂无信息</string>
    <string name="description">简介：%s</string>
    <string name="address">地址：%s</string>
    <string name="already_pay">已购买</string>
    <string name="pay">支付：￥%s</string>
    <string name="enrollment">立即报名</string>
    <string name="phone_info">资讯电话：%s</string>
    <string name="call">拨打电话</string>
    <string name="first_pay">第一期￥：%s</string>
    <string name="second_pay">第二期￥：%s</string>
    <string name="third_pay">第三期￥：%s</string>
    <string name="registrationNum">%s人已报名</string>
    <string name="highPraiseNum">好评数%s</string>
    <string name="satisfaction">满意度：</string>
    <string name="pinglun">点评</string>
    <string name="exam_des">考试页图片</string>
    <string name="error_exam">您的答案错误，正确答案如下：</string>
    <string name="yes">正确</string>
    <string name="no">错误</string>
    <string name="totalExam">总共%s题</string>
    <string name="exam">科目%s</string>
    <string name="exam_one">科目一</string>
    <string name="exam_four">科目四</string>
    <string name="subject_two_">科二考试技巧</string>
    <string name="subject_three_">科三考试技巧</string>
    <string name="exam_teach_one">科一教学视屏</string>
    <string name="exam_two">科二教学视屏</string>
    <string name="exam_three">科三教学视屏</string>
    <string name="exam_teach_four">科四教学视屏</string>
    <string name="exam_error_one">科一错题</string>
    <string name="exam_error_four">科四错题</string>
    <string name="distances">距离我：%s公里</string>
    <string name="distances_m">距离我：%s米</string>
    <string name="here">查看详情</string>
    <string name="camera">拍照上传</string>
    <string name="gallery">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="cancel_order">取消订单</string>
    <string name="school">驾校名称：%s</string>
    <string name="order_description">描述:%s</string>
    <string name="state">状态：%s</string>
    <string name="order_id">订单号：%s</string>
    <string name="order_time">日期：%s</string>
    <string name="total_money">订单金额：￥%s元</string>
    <string name="vip_text">晶崴VIP尊享\n\n  1、服务标准：①专车接送（城区范围）\n\n②1对1单车单人培训，专职教练负责制订培训大纲，\n\n全程跟踪科二、科三培训和考试直至考试通过。\n\n③所有费用包干（含各科目补考费、餐饮、茶水）\n\n④含7天住宿房券，\n\n⑤科目一考前专人培训做题直至交规题目合格后约考，\n\n⑥客服专职人员全程跟踪，专职办理相关培训及约考工作。\n\n  2、收费：9280元/人</string>
    <string name="vip">vip专享</string>
    <string name="continue_pay">继续支付</string>
    <string name="littleBad">差</string>
    <string name="bad">很差</string>
    <string name="soBad">非常差</string>
    <string name="ok">好</string>
    <string name="realOk">很好</string>
    <string name="very_good">非常好</string>
    <string name="choose_type">选择等级</string>
    <string name="goodOrNot">服务周到吗？来吐槽一下</string>
    <string name="complainId">编号：%s</string>
    <string name="complaintype">类型：%s</string>
    <string name="me">我：%s</string>
    <string name="feed">我的反馈：%s</string>
    <string name="complain_text">投诉对象</string>
    <string name="evaluate_text">评价对象</string>
    <string name="discuss_text">教练:</string>
    <string name="coachlike">我喜欢</string>
    <string name="coachlikeTitle">请留下您的手机号码与姓名,客服会与您联系！</string>
    <string name="coachlikename">您的姓名:</string>
    <string name="coachlikephone">您的手机:</string>
    <string name="coachlikecomplate">完成</string>
    <string name="choose_km">选择科目</string>
    <string name="evaluate">我的评价</string>
    <string name="evaluates">评价记录</string>
    <string name="commit">提交</string>
    <string name="evaluate_time">评论时间：%s</string>
    <string name="evaluate_level">评价等级：%s</string>
    <string name="coach">教练：%s</string>
    <string name="feed_hint">说点什么。。。</string>
    <string name="problem_feed">问题反馈</string>
    <string name="Not_Write">您还没有输入内容</string>
    <string name="answer">回复：%s</string>
    <string name="commit_bad">提交失败</string>
    <string name="commit_success">提交成功</string>
    <string name="consult_type">咨询类型</string>
    <string name="complain">我要投诉</string>
    <string name="complains">投诉记录</string>
    <string name="consult">我要咨询</string>
    <string name="consults">咨询历史</string>
    <string name="type">类型：%s</string>
    <string name="no_school">未查询到您的学籍信息</string>
    <string name="coachName">教练姓名：%s</string>
    <string name="km2">科目二</string>
    <string name="km3">科目三</string>
    <string name="calls">联系电话：%s</string>
    <string name="appoint">立即预约</string>
    <string name="appoints">预约记录</string>
    <string name="appoint_time">预约时间：%s</string>
    <string name="mien">驾校风采</string>
    <string name="introduction">驾校简介</string>
    <string name="Characteristic">驾校特色</string>
    <string name="Remarks">驾校备注</string>
    <string name="my_qr_code">我的二维码</string>
    <!-- &#8230;is simple of ellipsis,省略号 -->
    <string name="card_hint">说点什么&#8230;&#8230;&#8230;</string>
</resources>
