<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/title_layout"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/coachlikeTitle"
        android:gravity="center"
        android:paddingTop="20dp"
        android:textSize="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
     >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coachlikephone"
            android:textSize="15dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/coachlikephones"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
     >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coachlikename"
            android:textSize="15dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/coachlikenames"
            />
    </LinearLayout>
    <Button
        android:id="@+id/coachlikecomplates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coachlikecomplate"
        android:layout_margin="@dimen/text_size_20"
        android:background="@drawable/btn_bg_green"
        />
</LinearLayout>