<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <com.smartlab.drivetrain.view.EmoticonsEditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_height"
        android:gravity="top|left"
        android:hint="@string/feed_hint"
        android:textSize="@dimen/text_size_14"
        />
    <LinearLayout
        android:layout_below="@+id/input"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel"
            android:layout_marginRight="@dimen/login_margin"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dot_margin_buttom"
            android:text="@string/cancel"
            android:background="@drawable/btn_cancel_order"
            />
        <Button
            android:id="@+id/btn_send"
            android:text="@string/commit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dot_margin_buttom"
            android:background="@drawable/btn_bg_green"
            />
    </LinearLayout>
</RelativeLayout>