<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/white"
        android:id="@+id/list_layout"
        android:focusable="true" android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/complain_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/login_edit_padding"
            android:text="@string/complain_text"
            />
        <com.smartlab.drivetrain.view.ListViewForScrollView
            android:id="@+id/list"
            android:layout_below="@+id/complain_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
        </com.smartlab.drivetrain.view.ListViewForScrollView>
    </RelativeLayout>
    <com.smartlab.drivetrain.view.EmoticonsEditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_height"
        android:background="@color/white"
        android:layout_marginTop="@dimen/login_edit_padding"
        android:hint="@string/goodOrNot"
        android:textSize="@dimen/text_size_12"
        android:padding="@dimen/login_edit_padding"
        android:gravity="start|top"
        />
    <View
        android:layout_below="@+id/edit"
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/stork_width"
        android:background="@color/gray"
        />
    <Button
        android:layout_below="@+id/line"
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commit"
        android:layout_margin="@dimen/login_edit_padding"
        android:background="@drawable/btn_bg_green"
        />
</LinearLayout>